Chore: Adjust The History Sidebar for Mobile (#1280)
* Chore: Adjust The History Sidebar for Mobile

Signed-off-by: bitliu <bitliu@tencent.com>

* Chore: Adjust The History Sidebar for Mobile

Signed-off-by: bitliu <bitliu@tencent.com>

---------

Signed-off-by: bitliu <bitliu@tencent.com>

--- a/dashboard/frontend/src/components/ChatComponent.module.css
+++ b/dashboard/frontend/src/components/ChatComponent.module.css
@@ -1518,6 +1518,14 @@ body.playground-fullscreen .container {
     flex-direction: column;
   }
 
+  .chatTopBar {
+    display: none;
+  }
+
+  .chatArea {
+    max-height: 100vh;
+  }
+
   .sidebar {
     width: 100%;
     flex-direction: row;
